# Astro-Data-Analysis-

./: README.md  app.py  cumulative_2025.09.30_00.52.21.csv  imputer.pkl  k2pandc_2025.10.01_05.03.37.csv  newPlanet.ipynb  planet.json  pyproject.toml  requirements.txt  scaler.pkl  shap.html  test.ipynb  xgb_model.pkl
